@@ -1,5 +1,9 @@
+2009-11-17  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* m68k-tdep.c (m68k_gdbarch_init): Reuse previous initialization.
+
 2009-11-17  Nathan Sidwell  <nathan@codesourcery.com>
-2009-11-17  Vladimir Prus  <vladimir@codesourcery.com>
+            Vladimir Prus  <vladimir@codesourcery.com>
 
 	* Makefile.in (reg-cf.o, reg-cf.c): New targets.
 	* configure.ac: Check for __mcoldfire__ and set
